# Auto-Load-Guard

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: ProjectSettings.cmake
logic/guardian/: AutoStartFolderGuard.cpp  AutoStartFolderGuard.hpp  IGuard.cpp  IGuard.hpp  RegistryGuard.cpp  RegistryGuard.hpp  TaskSchedulerGuard.hpp
